fix mobile spacing

--- a/templated-industrious/assets/css/main.css
+++ b/templated-industrious/assets/css/main.css
@@ -2868,20 +2868,20 @@ img
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 4em;
+    /* margin-bottom: 4em; */
   }
   
   .image {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 4em;
+    /* margin-bottom: 4em; */
   }
   
   .images_two {
     display: flex;
     flex-direction: column;
-    margin-bottom: 4em;
+    /* margin-bottom: 4em; */
     align-items: center;
   }
   
@@ -2889,7 +2889,7 @@ img
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 2em;
+    /* margin-bottom: 2em; */
   }
   
   
